--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,12 @@
 <h1>Register</h1>
 <form action="/register" method="POST">
   <div>
-    <label for="userId">User id</label>
-    <input type="text" id="userId" name="userId" required>
+    <label for="userId">User Name</label>
+    <input type="text" id="username" name="username" required />
   </div>
   <div>
     <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password" required />
   </div>
   <div>
     <label for="role">Role</label>
