adding the middelware to handling the cookies

--- a/views/identify.ejs
+++ b/views/identify.ejs
@@ -1,12 +1,12 @@
 <h1>LOGIN</h1>
 <form action="/identify" method="POST">
   <div>
-    <label for="userId">User id</label>
-    <input type="text" id="userId" name="userId" required>
+    <label for="username">User id</label>
+    <input type="text" id="username" name="username" required />
   </div>
   <div>
     <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password" required />
   </div>
   <button type="submit">Login</button>
 </form>
